modules/base-vpc/igw.tf
###################
# Internet Gateway
###################
resource "aws_internet_gateway" "this" {

  vpc_id = "${aws_vpc.this.id}"

}
